# TornoTradeCraft

./: .gitignore  README.md  WIKI.md  pyproject.toml
tests/: test.ipynb  test_ibkr.py
tornotradingcraft/: __init__.py  cache.py  config.py
tornotradingcraft/assets/: Nasdaq.parquet  Nifty50.parquet  YahooFinance.parquet
tornotradingcraft/backtesters/: __init__.py  backtester.py  backtester_backtrader.py
tornotradingcraft/brokers/: __init__.py  broker.py
tornotradingcraft/brokers/ibkr/: api.py  broker_ibkr.py  dtos.py  helpers.py  session.py
tornotradingcraft/providers/: __init__.py  providers.py  yahoofinance_provider.py
tornotradingcraft/strategies/backtrader/: SimpleMovingAverageStrategy.py  __init__.py
tornotradingcraft/utils/: __init__.py  assets_crud.py  cache.py  cache_crud.py  data.py  enums.py  exception_utils.py
typings/appdirs/: __init__.pyi
