[tool.poetry]
name = "tornotradingcraft"
version = "0.1.0"
description = ""
authors = ["Abhijith Anandakrishnan <anandakrishnanabhijith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
appdirs = "^1.4.4"
diskcache = "^5.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
